--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ESNext",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   }
 }
