--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.23",
+    "jquery": "^3.7.1",
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
