--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.23",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-speech-recognition": "^3.10.0"
+    "react-speech-recognition": "^3.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
