--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "@choc-ui/chakra-autocomplete": "^5.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.23",
-    "jwt-decode": "^4.0.0",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-speech-recognition": "^3.10.0"
   },
