--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.0.23",
     "html2canvas": "^1.4.1",
-    "jwt-decode": "^4.0.0",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
