config: 실행 전에 prettier 실행되도록 script 세팅

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "prettier --write .",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --check ./src"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
