--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,9 +28,6 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-no-target-blank": "off",
-    "react-refresh/only-export-components": [
-      "warn",
-      { "allowConstantExport": true }
-    ]
+    "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }]
   }
 }
