config: eslint prettier설정 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,12 @@
     "react-refresh/only-export-components": [
       "warn",
       { "allowConstantExport": true }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   }
 }
