#19 refactor: ESlint 재설정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-no-target-blank": "off",
-    "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }]
+    "react-refresh/only-export-components": [
+      "warn",
+      { "allowConstantExport": true }
+    ]
   }
 }
