--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
