--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "openvidu-browser": "^2.29.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
