--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "framer-motion": "^11.0.23",
+    "history": "^5.3.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
